--- a/设计模式/_10装饰器模式/pom.xml
+++ b/设计模式/_10装饰器模式/pom.xml
@@ -8,5 +8,9 @@
     <artifactId>10装饰器模式</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 </project>
