--- a/设计模式/_14责任链模式/pom.xml
+++ b/设计模式/_14责任链模式/pom.xml
@@ -8,7 +8,10 @@
     <artifactId>14责任链模式</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 
 </project>
