--- a/设计模式/_4建造者模式/pom.xml
+++ b/设计模式/_4建造者模式/pom.xml
@@ -7,6 +7,10 @@
     <groupId>com.cyyaw</groupId>
     <artifactId>4建造者模式</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 
 </project>
