--- a/设计模式/_5原型模式/pom.xml
+++ b/设计模式/_5原型模式/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.cyyaw</groupId>
     <artifactId>5原型模式</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 </project>
